smo logo issues, spacing issues between forms, course details banner issues

--- a/app/assets/styles/modules/_courseFaq.scss
+++ b/app/assets/styles/modules/_courseFaq.scss
@@ -1,6 +1,6 @@
 .course-faq {
     position: relative;
-    background-color: #fff;
+    background-color: #eff1fe;
     padding-top: 20px;
     @include atSize850 {
       //  padding-top: 60px;
