--- a/themes/custom/athena/assets/styles/modules/_courseLoginPage.scss
+++ b/themes/custom/athena/assets/styles/modules/_courseLoginPage.scss
@@ -92,7 +92,7 @@
 			    background-color: #ffffff;
 			    width: 450px;
 			    padding: 10px;
-				margin: 4px 0 20px 0;
+				margin: 0 0 10px 0;
 				margin: 0;
 				font-size: 16px;
 				-webkit-appearance: none;
